--- a/srcs/frontend/app/src/chat/styles/ContentMessage.css
+++ b/srcs/frontend/app/src/chat/styles/ContentMessage.css
@@ -2,6 +2,9 @@
 .ContentMessage{
     background-color: violet;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .ContentMessage p {
