--- a/srcs/frontend/app/src/chat/styles/HeaderChatBox.css
+++ b/srcs/frontend/app/src/chat/styles/HeaderChatBox.css
@@ -16,3 +16,14 @@
     font-size: 22px;
     margin-left: 10px;
 }
+
+.ArrowBackPhone{
+    display: none;
+}
+
+@media (max-width: 800px){
+    .ArrowBackPhone{
+        display: block;
+        display: flex;
+    }
+}
