feat (/frontend/chat) => preview of last message sent, working on logged in icons.....

--- a/srcs/frontend/app/src/chat/styles/MessageToClick.css
+++ b/srcs/frontend/app/src/chat/styles/MessageToClick.css
@@ -17,6 +17,11 @@
     background-color: #384722;
 }
 
+.ContentMessageTitle{
+    max-width: 230px;
+    overflow-x: clip;
+}
+
 .ContentMessageTitle .PreviewMessage{
     color:#5A5E51;
 }
