feat: (chat.service.tsx + CreateChannelPopup.tsx...) : creation channel feature finish : need to make the code cleaner, adjust the security + parse error case in frontend

--- a/srcs/frontend/app/src/chat/styles/MessageSide.css
+++ b/srcs/frontend/app/src/chat/styles/MessageSide.css
@@ -11,3 +11,10 @@
         width: 100%;
     }
 }
+
+.containerSearchBar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #3E3B38;
+}
