--- a/srcs/frontend/app/src/chat/styles/PreviewUser.css
+++ b/srcs/frontend/app/src/chat/styles/PreviewUser.css
@@ -1,12 +1,18 @@
 .PreviewUser{
-    color: black;
-    border-radius: 20px;
-    background-color: white;
+    border-radius: 15px;
     width: fit-content;
-    padding: 3px 5px;
     margin: 0px 3px;
+    font-size: 15px;
+    padding: 0px 7px;
+    display: flex;
+    background-color: #E9EDEF;
+    font-weight: initial;
+    color: grey;
 }
 
 .PreviewUser button {
     padding: 0;
+    background-color: #E9EDEF;
+    font-size: 11px;
+    margin-left: 7px;
 }
