--- a/srcs/frontend/app/src/chat/styles/SearchBar.css
+++ b/srcs/frontend/app/src/chat/styles/SearchBar.css
@@ -38,6 +38,9 @@
 }
 
 .userListSearched{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     list-style: none;
     padding: 0;
 }
