--- a/srcs/frontend/app/src/chat/styles/ChannelSettings.css
+++ b/srcs/frontend/app/src/chat/styles/ChannelSettings.css
@@ -25,11 +25,11 @@
     cursor: pointer;
 }
 
-.isDisplay{
+.isDisplaySettings{
     visibility: visible;
 }
 
-.isReduce{
+.isReduceSettings{
     visibility: hidden;
 }
 
