--- a/srcs/frontend/app/src/chat/styles/ChatView.css
+++ b/srcs/frontend/app/src/chat/styles/ChatView.css
@@ -1,24 +1,20 @@
 
 .ChatViewContainer{
     height: 100%;
+    overflow: scroll;
     display: flex;
     position: relative;
+    background-color: #262421;
 }
 
 .ChatView{
-    background-color: #262421;
-    color: white;
-    overflow: scroll;
-    transition: 0.24s all ease;
-    height: 100%;
+    height: max-content;
 }
 
 .isDisplay{
     width: 100%;
-    transition: 0.24s all ease;
 }
 
 .isReduce{
     width: 100%;
-    transition: 0.24s all ease;
 }
