feat - huge refactoring (reduce of props drilling by using useContext). new feature : private message

--- a/srcs/frontend/app/src/chat/styles/ChannelInfo.css
+++ b/srcs/frontend/app/src/chat/styles/ChannelInfo.css
@@ -63,3 +63,11 @@
 .clickable{
     cursor: pointer
 }
+
+.ContainerIsDisplay{
+    display: block;
+}
+
+.ContainerIsReduce{
+    display: none;
+}
