feat (connecting to 42 api, routes pretty clean)

--- a/srcs/frontend/app/src/index.css
+++ b/srcs/frontend/app/src/index.css
@@ -29,6 +29,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  
 }
 
 h1 {
@@ -67,3 +68,10 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* .font-link {
+  font-family: 'Press Start 2P', cursive;
+}
+ */
+
+ 
