feature (AuthFrontend): added to hook to the PretectedRoute component to logout ouser if token expired

--- a/srcs/frontend/src/home/styles/generalStyles.css
+++ b/srcs/frontend/src/home/styles/generalStyles.css
@@ -92,8 +92,9 @@ html {
 }
 
 img {
-  max-width: 15%;
+  max-width: 10%;
   height: auto;
+  /* border-radius: 50%; */
 }
 
 @media (max-width: 768px) {
