debug: front/back: remove channelInfo components when a user 1: leave a channel 2: kick last user of a channel. Need to work on ban last user

--- a/srcs/frontend/app/src/chat/styles/SearchBar.css
+++ b/srcs/frontend/app/src/chat/styles/SearchBar.css
@@ -46,6 +46,7 @@
 .userListSearched li{
     cursor: pointer;
     width: 100%;
+    display: flex;
 }
 
 .userListSearched li p{
@@ -57,4 +58,8 @@
     font-size: 30px!important;
     color: white;
     cursor: pointer;
+}
+
+.checkboxSearchBar{
+    transform: scale(1.3);
 }
