--- a/srcs/frontend/app/src/chat/styles/PreviewUser.css
+++ b/srcs/frontend/app/src/chat/styles/PreviewUser.css
@@ -8,6 +8,7 @@
     display: flex;
     font-weight: 400;
     color: grey;
+    transition: 0.5s ease;
 }
 
 .PreviewUser .icon{
@@ -28,3 +29,19 @@
     display: flex;
     border-radius: 13px;
 }
+
+.fadeIn {
+    animation: fadeInAnimation 0.5s ease-in-out;
+    opacity: 1;
+  }
+  
+  @keyframes fadeInAnimation {
+    from {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
