feat: make the UX more fluid in channel settings navigation, add useEffect with channelId dependencies to reload userList in channel-settings when the user navigate in several channels

--- a/srcs/frontend/app/src/chat/styles/HeaderChatBox.css
+++ b/srcs/frontend/app/src/chat/styles/HeaderChatBox.css
@@ -22,14 +22,14 @@
 }
 
 
-.settingsButton {
+.showSettingsMenu {
   background-color: rgba(0,0,0,0);
   color: white;
   transition: 0.6s all ease;
   border-color: rgba(0,0,0,0);
 }
 
-.settingsButton:hover {
+.showSettingsMenu:hover {
     background-color: #262421;
     transition: 0.6s all ease;
 }
