--- a/srcs/frontend/app/src/chat/styles/ContentMessage.css
+++ b/srcs/frontend/app/src/chat/styles/ContentMessage.css
@@ -1,6 +1,5 @@
 
 .ContentMessage{
-    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -8,4 +7,12 @@
 
 .ContentMessage p {
     text-align: left;
+}
+
+.wide{
+    width: 70%;
+}
+
+.reduce{
+    width: 45%;
 }
