feat: frontend (join channel features): more clear (setError add more accuracte errors)

--- a/srcs/frontend/app/src/chat/styles/JoinChannel.css
+++ b/srcs/frontend/app/src/chat/styles/JoinChannel.css
@@ -1,7 +1,10 @@
 .containerJoinChannel{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
-    height: 100%;
+    gap: 20px;
+}
+
+.fontColorWhite {
+    color: white;
 }
