--- a/srcs/frontend/src/chat/styles/ChatBoxContainer.css
+++ b/srcs/frontend/src/chat/styles/ChatBoxContainer.css
@@ -1,6 +1,8 @@
 
 .ChatBoxContainer{
-    height: calc(100vh - 68.5px - 20px); /* 68.5px = height of navbar and 20 px = height of padding of ChatBoxContainer*/
+    /* @to-do check if the height is ok */
+    /* height: calc(100vh - 68.5px - 20px); 68.5px = height of navbar and 20 px = height of padding of ChatBoxContainer */
+    height: 100%;
     background-color: #161512;
     display: flex;
     justify-content: center;
