--- a/srcs/frontend/src/chat/styles/ContentMessage.css
+++ b/srcs/frontend/src/chat/styles/ContentMessage.css
@@ -1,5 +1,4 @@
-
-.ContentMessage{
+.ContentMessage {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -9,10 +8,17 @@
     text-align: left;
 }
 
-.wide{
+.wide {
     width: 70%;
 }
 
-.reduce{
+.reduce {
     width: 45%;
+}
+
+@media (max-width: 800px) {
+    .wide {
+        width: 100%;
+        height: 100%;
+    }
 }
