feat(Settings): Implement loading state and fix file input error - Added a loading state to the Settings component to show a spinner while fetching user data - Fixed a TypeScript error by passing the first file from the FileList to the checkAndShowInputAvatar function - Improved user experience by handling loading state and error messages more effectively

--- a/srcs/frontend/src/home/styles/settings/Settings.css
+++ b/srcs/frontend/src/home/styles/settings/Settings.css
@@ -2,6 +2,7 @@
 .fade-enter,
 .fade-appear {
   opacity: 0;
+  transform: translateX(-100%);
 }
 
 .loading-enter-active,
@@ -10,6 +11,8 @@
 .fade-exit {
   opacity: 1;
   transition: opacity var(--transition-duration); /* Use a CSS variable for transition duration */
+  transform: translateX(0);
+  transition: transform var(--transition-duration);
 }
 
 .fade-exit-active {
