--- a/srcs/frontend/src/chat/styles/Message.css
+++ b/srcs/frontend/src/chat/styles/Message.css
@@ -45,6 +45,13 @@
 .reduceMsgWidth{
     max-width: 65%!important;
 }
+
+.username{
+    font-size: 9px;
+    margin: 0px;
+    padding: 0px;
+    color: #A8A8A8;
+}
  
 /* .wideMsgWidth{
     width: 80%;
