--- a/srcs/frontend/src/chat/styles/Message.css
+++ b/srcs/frontend/src/chat/styles/Message.css
@@ -46,11 +46,12 @@
     max-width: 65%!important;
 }
 
-.username{
+.usernameSentMessage{
     font-size: 9px;
     margin: 0px;
     padding: 0px;
     color: #A8A8A8;
+    display: flex;
 }
  
 /* .wideMsgWidth{
