update( settings component and auth.service ): I enhanced css structure of settings components, I added the css attribute contentent to the home page to as it was before to avoid modifying things we have already worked on

--- a/srcs/frontend/src/home/styles/settings/Settings.css
+++ b/srcs/frontend/src/home/styles/settings/Settings.css
@@ -1,3 +1,25 @@
+@import '../generalStyles.css';
+
+.settings-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100%;
+}
+
+.item {
+  margin-top: 3%;
+}
+
+.item:last-child {
+  margin-bottom: 0;
+}
+
+.h3 {
+  color: var(--white-color);
+}
+
 .loading-enter,
 .fade-enter,
 .fade-appear {
