--- a/srcs/frontend/src/home/styles/loadingSpinner/LoadingSpinner.css
+++ b/srcs/frontend/src/home/styles/loadingSpinner/LoadingSpinner.css
@@ -1,3 +1,6 @@
+
+@import '../settings/Settings.css';
+
 .spinner {
   border: 8px solid var(--white-color); /* Light grey */
   border-top: 8px solid var(--blue-color); /* Blue */
