update: using getUserAvatar API functionality of Alex to add user's avatar to chat frontend

--- a/srcs/frontend/src/chat/styles/User.css
+++ b/srcs/frontend/src/chat/styles/User.css
@@ -24,7 +24,10 @@
 }
 
 .avatar_image{
-    border-radius: 50%;
+    border-radius: 50%!important;
+    max-width: unset!important;
+    width: 49px!important;
+    height: 49px!important;
 }
 
 .User .username{
