feature: blockUser server-side

--- a/srcs/frontend/src/chat/styles/PreviewUser.css
+++ b/srcs/frontend/src/chat/styles/PreviewUser.css
@@ -22,6 +22,9 @@
     border-radius: 14px;
     margin-right: 6px;
     position: relative;
+    max-width: unset!important;
+    height:29px!important;
+    width: 29px!important;
 }
 
 .PreviewUser span{
