--- a/srcs/frontend/src/chat/styles/MessageToClick.css
+++ b/srcs/frontend/src/chat/styles/MessageToClick.css
@@ -45,6 +45,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .senderName{
