feature(2FA with 42users) and enhacement of OAuth authentication:
Description:
- Implemented OAuth authentication flow for 42's API.
- Added the OAuth42Callback component to handle OAuth redirects and token exchange.
- Updated the AuthChoice component to include the 'withCredentials' attribute in Axios requests for cookie-based authentication.
- Ensured correct redirection URIs in OAuth requests and environment configurations.
- Enabled 'Preserve log' in browser network tab for capturing OAuth-related network activities.
- Handled successful authentication response with conditional navigation based on the user's 2FA status or direct navigation to the home page.
- Fixed various issues related to OAuth token exchange and error handling.
- Added console logs for debugging and verifying the OAuth process flow.

--- a/srcs/frontend/src/home/styles/generalStyles.css
+++ b/srcs/frontend/src/home/styles/generalStyles.css
@@ -74,7 +74,8 @@ html {
   text-size-adjust: auto;
   flex-shrink: 0.2;
   flex-wrap: wrap;
-  font-size: large;
+  padding: 0.5rem 1rem; /* Adjust padding for better touch interaction */
+  border-radius: 0.25rem; /* Optional: adds rounded corners */
 }
 
 .button:hover {
@@ -89,6 +90,10 @@ img {
 }
 
 @media (max-width: 768px) {
+  html {
+    font-size: 14px; /* Slightly reduce the base font size */
+  }
+
   .header {
     flex-direction: column;
     gap: 0.625rem;
@@ -105,5 +110,24 @@ img {
 
   .content {
     padding: 0.625rem 0;
+    width: 90vw; /* Increase width to utilize more screen space */
   }
+
+  .button {
+    font-size: medium; /* Adjust font size for smaller screens */
+    padding: 0.4rem 0.8rem; /* Adjust padding for smaller screens */
+  }
+img {
+  max-width: 30%;
+  /* Larger percentage for smaller screens */
+  height: auto;
+  /* Maintain aspect ratio */
+  display: block;
+  /* Optional: Use block to enable margin auto */
+  margin: 0 auto;
+  /* Optional: Center the image horizontally */
+  padding: 0.5rem 0;
+  /* Optional: Add some padding around the image */
 }
+}
+
